anna (1.08) UNRELEASED; urgency=low

  * Colin Watson
    - Fix log message when installing a package due to the anna-install
      queue.

 -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 17:11:07 +0100

anna (1.07) unstable; urgency=low

  * Not for sarge.
  * Joey Hess
    - Removed load-installer udeb, since it's no longer used, having been
      replaced by download-installer, etc.
    - Removed code in anna to present a list of retreivers. Now anna must
      always be run with an argument. Closes: #216084, #218774
    - Also removed template for this question.
    - Removed code to notice new retreivers and exit specially, since
      that was only needed in old style calling method.
    - Stop using debconf db transiently to store the retreiver to use.
    - Various code cleanups.
    - Remove test-anna ifdefed code that was so old it didn't work.
    - Remove some defines that were to support libd-i v3.
    - Split out retreiver interface code into its own file and cleaned up
      the function names for consistency.
    - Move anna binary from /usr/bin to /bin.
    - The state machine in anna's main is overkill, since there is now only
      one question asked, so remove it. Closes: #222500
    - Store default retriever in debconf db if ran like
      "anna <retriever> default", for use by "anna install <udeb>"
    - Add support for using "anna install <udeb ..>". Closes: #266624
    - Cache Packages file for default retriever (except in low memory mode)
      to avoid expensive re-retreival.
    - Add a README.
  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (es.po) by Javier Fernandez-Sanguino Peña
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Yuri Kozlov
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
